Fix wrapping bug

--- a/css/psdi-common.css
+++ b/css/psdi-common.css
@@ -547,7 +547,7 @@ a svg {
 }
 
 .navbar__title h5 {
-  display: unset;
+  display: flex;
   color  : var(--ifm-heading-color);
   margin : 0 0 0.5rem 0.5rem;
 }
